# health_voice

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/None/speechbrain/: hyperparams.yaml
backend/app/: config.py  main.py
backend/app/pipeline/: analysis.py  asr.py  audit.py  diarization.py  fhir.py  ner.py  soap.py  vad.py
backend/scripts/: smoke_asr.py  stream_client.py  test_phase2.py
frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: TranscriptionConsole.tsx  ui.tsx
frontend/public/: pcm-worklet.js
